# Bookwyrms-Hoard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WEB_API.md  dev_check.py  docker-compose.yml  main.py  pyproject.toml  requirements-docker.txt  requirements.txt  switch_data.sh  test_api_comprehensive.py  test_lookup.py  test_shelf_api.py
.github/: copilot-instructions.md
bookwyrms/: __init__.py  cli.py  db.py  library_service.py  lookup.py  mcp_tools.py  models.py  shelf_models.py  storage.py  storage_json.py  time_utils.py  web_api.py
docs/: sqlite-migration-plan.md
scripts/: init_sqlite.py  migrate_json_to_sqlite.py
static/: index.html
static/css/: kiosk.css
static/js/: api.js  kiosk.js
tests/: test_storage.py
